pxc/tests/test_130_constvec/csvec3.px
namespace csvec3;
public import common -;

{
  csvector{int} v;
  v.push_back(3);
  v.push_back(4);
  v.push_back(5);
  svector{int} w = v; // error
  println(w);
}
